Data watcher update
Updated most datawatcher lines, a cleaned up some other imports